"$Id$"
Top of SVN tree:
------------------------------------------------------------------------------

gtk-v2/src/main.c
gtk-v2/src/sound.c: Move the signal handler for SIGPIPE in main so that it
can be used both for sounds and for scripts.
Raphael Quinet 2008-04-26

Apply patch #1878451: Let crossfire client compile with OSS4's soundcard.h
Courtesy anonymous.
 sound-src/cfsndserv.c
Nicolas Weeger 2008-03-29

gtk-v2/src/main.c: Change the minimum window size to 640x480 since a window
  layout has been made that shows it is possible.  There seem to be people
  out there that like small...
Kevin Bulgrien 2008-02-17

gtk-v2/glade/gtk-v2.glade: Primarily a rename of widgets that had generic
  names (Eg. vbox2 --> vbox_all).  The corestats tab changed to cuddle the
  stat value with the stat name for readability.  Numeric values beside the
  stat bars is now left justified.  Fire/Run indicator positions slightly
  altered.  Presently the window will not shrink smaller than 800x600. This is
  due to the size set in main.c (geometry.min_width and geometry.min_height).
Kevin Bulgrien 2008-02-17

gtk-v2/glade/AUTHORS: Update the descriptions of recently modified client
  layout files.
Kevin Bulgrien 2008-02-12

gtk-v2/glade/un-deux.glade: This is an aethsetic overhaul, adding viewports
  with insets to set different screen elements off.  Key widgets are moved to
  a common centerline below the map notebook to keep critical information at
  a consistent eye-level to improve visibility during play.  The encumbrance
  and count box is now between the inventory and ground view, and the fire/run
  indicators are just below the command entry box.
Kevin Bulgrien 2008-02-12

gtk-v2/glade/v1-redux.glade: Roll in the changes from gtk-v1.glade that make
  the layout more true to the original GTK V1 layout while keeping the tab
  notebook improvement.  The encumbrance display and count box has had a
  slight aesthetic improvement also.
Kevin Bulgrien 2008-02-12
