@@ -218,10 +218,34 @@ AC_CHECK_LIB(m, sqrt)
 
 AC_CHECK_LIB(pthread, pthread_create)
 
-AC_CHECK_LIB(lua, main)
-AC_CHECK_LIB(lualib, main)
+dnl Check for lua 5.0 or 5.1.  See also: http://lua-users.org/wiki/AutoConfig
+AC_CHECK_LIB(lua, lua_call,
+[   # lua found
+    AC_CHECK_LIB(lualib, luaopen_loadlib,
+    [   # 5.0 needed lualib.
+        lua_scripting="yes"
+	LUA_LIBS="-llua -llualib -ldl -lm"
+    ],
+    [   # We do not have lualib, so it might be 5.1
+	AC_CHECK_LIB(lua, luaL_register,
+        [   # Lua 5.1 found
+            lua_scripting="yes"
+	    AC_DEFINE(HAVE_LUA_5_1, 1, [Define to use Lua 5.1])
+        ],
+        [   # No, it is not 5.1.  Now what?
+	    AC_MSG_WARN(Linking with liblualib failed.)
+        ])
+    ],
+    [
+        -llua -ldl -lm
+    ])
+])
+if eval "test x$lua_scripting != xyes" ; then
+    AC_DEFINE(HAVE_LUA, 1, [Define to use Lua 5.x])
+    lua_scripting="no"
+    LUA_LIBS=""
+fi
 AC_SUBST(LUA_LIBS)
-AM_CONDITIONAL(HAVE_LIBLUA, test x"$cf_have_liblua" = "xyes")
 
 dnl Check for OpenGL
 AC_CHECK_LIB(GL, main)
@@ -546,3 +570,6 @@ if eval "test x$sound = xyes"; then
 fi
 AC_MSG_NOTICE([    Will build sound server?             $sound $sound_system])
 
+AC_MSG_NOTICE([])
+AC_MSG_NOTICE([  Scripting options])
+AC_MSG_NOTICE([    Will include lua interface?          $lua_scripting])
